chat-app-frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: snappy-frontend
spec:
  selector:
    app: snappy-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
