chat-app-frontend/ingress-def.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /snappy
            pathType: Prefix
            backend:
              service:
                name: snappy-backend
                port:
                  number: 5000
